--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   </head>
   <body>
     <h1>this be a website</h1>
+    <li>as if this were a test website</li>
+    <img src="images/DefaultCube.png" alt="Default Cube" />
   </body>
 </html>
