--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>My test page</title>
   </head>
   <body>
-    <h1>this be a website</h1>
-    <li>as if this were a test website</li>
+    <h1>Brightbites website</h1>
+    <p>that hopefully doesn't suck</p>
     <img src="images/DefaultCube.png" alt="Default Cube" />
+    <p>If this wasn't clear by the lack of content or badly formated site that this was made with the html basics <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics">MDN tutorial</a></p>
   </body>
 </html>
