--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Brightbites website</h1>
     <p>that hopefully doesn't suck</p>
-    <img src="images/DefaultCube.png" alt="Default Cube" />
+    <p><img src="images/DefaultCube.png" alt="Default Cube" /></p>
     <p>If this wasn't clear by the lack of content or badly formated site that this was made with the html basics <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics">MDN tutorial</a></p>
     <p>So how has your day been, Mine? terible</p>
   </body>
