img content clamp

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <p>that hopefully doesn't suck</p>
     <p><img src="images/DefaultCube.png" alt="Default Cube" /></p>
     <p>If this wasn't clear by the lack of content or badly formated site that this was made with the html basics <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics">MDN tutorial</a></p>
-    <p>So how has your day been, Mine? terible</p>
+    <p>So how has your day been, Mine? terible the image will not stay in the box and my spelling is all over the place</p>
   </body>
 </html>
